Editstatus page but still has bugs when jump between tabs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chakra-ui-starter-with-header-and-footer",
+  "name": "cudrepv2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
