--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@supabase/supabase-js": "^2.4.0",
+    "formik": "^2.4.5",
     "framer-motion": "^8.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.6.2"
   },
   "devDependencies": {
